examples/failing/f006-if.sq
fn main() {
    if 1 + 2 {
        print32(1);
    }
}